--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 </head>
 <body>
     <div id="game-container">
-        <img id="background-tractor" src="zdjecie 1 - tlo.jpg" alt="Traktor z rozrzutnikiem obornika">
-        <img id="target-image" src="zdjecie 2.jpg" alt="Ozzy" class="hidden">
+        <img id="background-tractor" src="zdjecie 1 - tlo.jpg" alt="Traktor z rozrzutnikiem obornika" draggable="false">
+        <img id="target-image" src="zdjecie 2.jpg" alt="Ozzy" class="hidden" draggable="false">
         
         <div id="start-screen">
             <h1>Bitwa o Gówno!</h1>
