--- a/index.html
+++ b/index.html
@@ -45,6 +45,15 @@
         <div id="message-display"></div>
     </div>
 
+    <audio id="background-music" loop>
+        <source src="traktor.mp3" type="audio/mpeg">
+        Twoja przeglądarka nie obsługuje elementu audio.
+    </audio>
+    <audio id="death-sound">
+        <source src="death.mp3" type="audio/mpeg">
+        Twoja przeglądarka nie obsługuje elementu audio.
+    </audio>
+
     <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-firestore-compat.js"></script>
     
