--- a/index.html
+++ b/index.html
@@ -54,10 +54,9 @@
         Twoja przeglądarka nie obsługuje elementu audio.
     </audio>
 
-    <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app-compat.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-firestore-compat.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-auth-compat.js"></script>
+    <!-- WAŻNE: Usunięto osobne skrypty Firebase, będą importowane w script.js -->
     
+    <!-- Główny skrypt aplikacji, załadowany jako moduł -->
     <script src="script.js" type="module"></script>
 </body>
 </html>
